--- a/Admin/Admin/Admin.csproj
+++ b/Admin/Admin/Admin.csproj
@@ -10,6 +10,8 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.App" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.1.1" />
+    <PackageReference Include="mongocsharpdriver" Version="2.7.0" />
   </ItemGroup>
 
 </Project>
