--- a/Admin/Admin/appsettings.json
+++ b/Admin/Admin/appsettings.json
@@ -1,7 +1,7 @@
 {
   "MongoConnection": {
-    "ConnectionString": "mongodb://admin:abc123!@localhost",
-    "Database": "QuestionsDb"
+    "ConnectionString": "mongodb://localhost:27017",
+    "Database": "adminDatabase"
   },
   "Logging": {
     "LogLevel": {
