--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,7 @@ before_script:
   - cd Admin/QuestionBankView
   - npm install -g @angular-devkit/build-angular
   - npm install -g @angular/cli
+  - npm install
 
 script:
   - ng build
