--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,11 @@ notifications:
     on_failure: always
   slack: srboeingdotnet:GhCzs3W4Gj7eaQ2pLNwIWVCa
 mono: none
+before_install:
+  - export CHROME_BIN=chromium-browser
+  - export DISPLAY=:99.0
+  - sh -e /etc/init.d/xvfb start
+  
 before_script:
   - cd Admin/QuestionBankView
   - npm install -g @angular-devkit/build-angular
