--- a/.travis.yml
+++ b/.travis.yml
@@ -14,9 +14,8 @@ before_install:
   - export CHROME_BIN=chromium-browser
   - export DISPLAY=:99.0
   - sh -e /etc/init.d/xvfb start
-  
+
 before_script:
-  - cd Admin/QuestionBankView
   - npm install -g @angular-devkit/build-angular
   - npm install -g @angular/cli
   - npm install
@@ -25,4 +24,5 @@ script:
   - ng build
   - ng test --watch=false
 
-  
+after_success:
+- /bin/bash ./deploy.sh
