--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,7 @@
-version: '3'
+version: "3"
 services:
-  angular: # name of the first service
-    build: ./Admin/QuestionBankView/ # specify the directory of the Dockerfile
-    ports:
-      - "4200:4200" # specify port forewarding
+ angular:
+  build: .
+  labels:
+    - "SERVICE_80_NAME=QuestionBankUI"
+    - "SERVICE_TAGS=QuestionBankUITag"
