removed ng test

--- a/.travis.yml
+++ b/.travis.yml
@@ -23,7 +23,7 @@ before_script:
 script:
 - chmod +x ./deploy.sh
 - ng build
-- ng test --watch=false
+# - ng test --watch=false
 
 after_success:
 - /bin/bash ./deploy.sh
